# melz

./: CHANGELOG.txt  CONTRIBUTING.md  LICENSE  README.md  __init__.py  setup.cfg
.github/workflows/: greetings.yml
src/Classification/: LinearRegression.py  RegressionHelpers.py
src/classification/: ClassificationHelpers.py  LogisticRegression.py  NaiveBayes.py
src/helpers/: DataMethods.py  Plots.py
src/melz.egg-info/: PKG-INFO
src/regression/: LinearRegression.py  RegressionHelpers.py  __init__.py
src/src/classification/: LogisticRegression.py  NaiveBayes.py  __init__.py
src/src/helpers/: Plots.py  __init__.py
src/src/melz.egg-info/: PKG-INFO  SOURCES.txt
src/src/regression/: LinearRegression.py
src/visualisation/: Plots.py
