[metadata]
name = absotone-melz
version = 0.0.4
author = Vijay Jaisankar
author_email = vijayjaisankar.vj@gmail.com
description = A machine leaning library for everyone!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/absotone/spotifynd
project_urls =
    Bug Tracker = https://github.com/absotone/spotifynd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas 
    matplotlib

